k8s/example_packman/k3s-local-k8s-cluster-deploy/deployment configs/packman-deployment.yaml
# Ingress Definition
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pacman
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: pacman.paxel.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pac-man
                port:
                  number: 8080
  tls:
    - hosts:
        - pacman.paxel.ca
      secretName: pacman.paxel.ca-tls

---

# Service Definition for Pac-Man Application
apiVersion: v1
kind: Service
metadata:
  name: pac-man
  namespace: pacman
  labels:
    name: pac-man
spec:
  selector:
    name: pac-man
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer

---

# Deployment Definition for Pac-Man Application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pac-man
  namespace: pacman
  labels:
    name: pac-man
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pac-man
  template:
    metadata:
      labels:
        name: pac-man
    spec:
      containers:
        - name: pac-man
          image: docker.io/jessehoch/pacman-nodejs-app:latest
          ports:
            - name: http-server
              containerPort: 8080
